<resources>
    <string name="app_name">StudentAssistant</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="save_name">Save Name</string>
    <string name="schedule">Schedule</string>
    <string name="reminders">Reminders</string>
    <string name="expenses">Expenses</string>
    <string name="home">Home</string>
    <string name="task_name_hint">Task name</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="amount_hint">Amount</string>
    <string name="food">Food</string>
    <string name="transport">Transport</string>
    <string name="entertainment">Entertainment</string>
    <string name="education">Education</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="save_expense">Save Expense</string>
</resources>