<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bg_app"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:backgroundTint="@color/red_btn"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount_hint"
        android:textSize="24sp"
        android:inputType="numberDecimal"
        android:layout_marginBottom="16dp"/>

    <CheckBox
        android:id="@+id/cbFood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/food"
        android:layout_marginBottom="8dp"/>

    <CheckBox
        android:id="@+id/cbTransport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transport"
        android:layout_marginBottom="8dp"/>

    <CheckBox
        android:id="@+id/cbEntertainment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entertainment"
        android:layout_marginBottom="8dp"/>

    <CheckBox
        android:id="@+id/cbEducation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/education"
        android:layout_marginBottom="16dp"/>

    <RadioGroup
        android:id="@+id/rgPaymentMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <RadioButton
            android:id="@+id/rbCash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cash"
            android:layout_marginBottom="8dp"/>

        <RadioButton
            android:id="@+id/rbCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card"/>

    </RadioGroup>

    <Button
        android:id="@+id/btnSaveExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_expense"
        android:backgroundTint="@color/orange_btn"
        android:layout_marginBottom="16dp"/>

    <ListView
        android:id="@+id/lvExpenses"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>