<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app">

    <TextView
        android:id="@+id/tvGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:layout_marginTop="140dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_hint"
        android:layout_margin="16dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/tvGreeting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSaveName"/>

    <Button
        android:id="@+id/btnSaveName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_name"
        android:layout_margin="16dp"
        android:backgroundTint="@color/red_btn"
        app:layout_constraintTop_toBottomOf="@id/tvGreeting"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Невидимий роздільник -->
    <View
        android:id="@+id/spacer"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Кнопки для переходу -->
    <Button
        android:id="@+id/btnSchedule"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/orange_btn"
        android:text="@string/schedule"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacer" />

    <Button
        android:id="@+id/btnReminders"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/reminders"
        android:layout_margin="16dp"
        android:backgroundTint="@color/orange_btn"
        app:layout_constraintTop_toBottomOf="@id/btnSchedule"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnExpenses"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/expenses"
        android:layout_margin="16dp"
        android:backgroundTint="@color/orange_btn"
        app:layout_constraintTop_toBottomOf="@id/btnReminders"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>